--- a/src/App.css
+++ b/src/App.css
@@ -45,3 +45,9 @@
   display: flex;
   justify-content: center;
 }
+
+.spinner{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
